[package]
name = "mpu6000"
version = "0.1.3"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"

description = "Platform agnostic driver for MPU6000 6-axis IMU"
repository = "https://github.com/qiuchengxuan/mpu6000"
readme = "README.md"
keywords = ["mpu6000", "imu", "embedded"]
license = "Apache-2.0"

[dependencies]
embedded-hal = "0.2.3"
nalgebra = {version = "0.21", default-features = false}
